fix: try fixing transitions on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@ h1 {
   text-align: center;
 }
 
-html, body { height: 100%; }
+html, body { height: 100vh; }
 
 body {
   color: rgb(var(--foreground-rgb));
